fix: mobile spacing

--- a/filing/css/styles.css
+++ b/filing/css/styles.css
@@ -1079,6 +1079,9 @@ footer {
 	hr.large {
 		margin: 30px 0 30px 0;
 	}
+	hr.full {
+		margin: 30px 0 10px 0;
+	}
 }
 
 @media only screen and (max-width: 320px) {
